--- a/Mobile_price_prediction.ipynb
+++ b/Mobile_price_prediction.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/preetikhullbe/mobile-price-prediction/blob/main/Mobile_price_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "JiKrDbTk00tK"
       },
       "source": [
@@ -6911,7 +6921,8 @@
       "collapsed_sections": [],
       "provenance": [],
       "mount_file_id": "11J-_JUncDoIv3L6utIccPsF--_nuJMkC",
-      "authorship_tag": "ABX9TyNUAS3YDiDc2LLY8w/ygXV4"
+      "authorship_tag": "ABX9TyNUAS3YDiDc2LLY8w/ygXV4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
